2005-03-17  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/cpuinfo.c (cpuinfo_report): Fixed the CPUID
	reporting for the lh7a404.

	* src/mach-lh7a40x/initialize.c: Added hack to the lpd7a40x
	initialization to enable PCMCIA.  May be a work-around for a NOR
	flash problem.
 
	* src/drivers/drv-nor-cfi.c (nor_read): Eliminated (most)
	references to nor chip length except when necessary.

2005-03-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/timer-lh79520.c (lh79520_timer_init): Fixed the
	initialization of the boot loader timer.

	* src/mach-lh7952x/lpd79520_config (CONFIG_NOR_BANK0_START): Fixed
	the starting address of the NOR flash so that the REMAP register
	doesn't make a difference.

	* src/apex/cmd-boot.c: Making sure that the ATAG pointer is valid.

2005-03-15  Marc Singer  <elf@buici.com>

	* src/arch-arm/entry/apex.lds.S: Added new START identifier for
	the sake of the memory scan function.

	* src/drivers/drv-mem.c (memory_scan): The memory scan function
	needed to make sure not to write to BSS.  It now avoids the entire
	memory image of APEX. 

2005-03-10  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c: SDRAM initialization was
	completely broken since 1.1.0.  It works again.

	* src/drivers/drv-cf.c: Moved Compact Flash code to live among
	generic drivers.  Implemented CF for the 79520's.  Wrote code for
	the 7a40x's, but it isn't working.  
	
	* src/drivers/drv-ext2.c (ext2_path_to_inode): Fixed dumb error in
	the symlink traversal code.

	* src/drivers/drv-nor-cfi.c: Improved TALK for troubleshooting
	flash.

2005-03-09  Marc Singer  <elf@buici.com>

	* src/drivers/drv-nor-cfi.c: Moved the cfi driver into the generic
	driver directory.  There is a machine specific header to handle
	the target controlled constants.

	* Makefile (ENV_CROSS_COMPILE): Fixed the selection of the cross
	compiler so that the environment will override the configured
	value.

2005-03-07  Marc Singer  <elf@buici.com>
