@@ -1,71 +1,88 @@
-# kev79524_config
+#
+# Automatically generated make config: don't edit
+# Linux kernel version: 
+# Sun Mar 20 18:42:47 2005
+#
+CONFIG_ARM=y
+CONFIG_ARCH_LH7952X=y
+# CONFIG_ARCH_LH7A40X is not set
+# CONFIG_ARCH_IXP42X is not set
+# CONFIG_EXPERIMENTAL is not set
 
-# Makefile macros
-ARCH=arm
-CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
-#CROSS_COMPILE=/usr/arm-linux/gcc-2.95.3-glibc-2.2.2/bin/arm-linux-
-
-CONFIG_ARCH=arm
-CONFIG_MACH=lh7952x
-
-CONFIG_ARCH_ARM=y
-CONFIG_MACH_LH7952X=y
-CONFIG_MACH_LH79524=y
+#
+# General Setup
+#
+CONFIG_CROSS_COMPILE="/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-"
+# CONFIG_SMALL is not set
+# CONFIG_DEBUG_LL is not set
+CONFIG_SPINNER=y
+CONFIG_ATAG=y
+# CONFIG_MACH_LPD79520 is not set
+# CONFIG_MACH_LPD79524 is not set
 CONFIG_MACH_KEV79524=y
+
+#
+# Platform Setup
+#
+CONFIG_ATAG_PHYS=0x20000100
 CONFIG_APEX_VMA=0x20200000
-
 CONFIG_KERNEL_LMA=0x20008000
-
 CONFIG_SDRAM_BANK0=y
 CONFIG_SDRAM_BANK1=y
-
-# LH28F320BFE, 32M (2Mx16)
 CONFIG_NOR_BUSWIDTH=16
+CONFIG_NOR_BANK0=y
 CONFIG_NOR_BANK0_START=0x44000000
-CONFIG_NOR_BANK0_LENGTH=(4*1024*1024)
-
-CONFIG_SPINNER=y
-
-#CONFIG_DEBUG_LL=y
-
-#CONFIG_SMALL=y
-CONFIG_ALLHELP=y
-
-# Test code for the LCD display
-CONFIG_CLCDC=y
-
-# Test code for the audio codec
-#CONFIG_CODEC=y
-
-# Test code for the adc
-CONFIG_ADC=y
-
-CONFIG_CMD_CHECKSUM=y
-CONFIG_CMD_COPY=y
-CONFIG_CMD_DUMP=y
-CONFIG_CMD_DRVINFO=y
-CONFIG_CMD_ENV=y
-CONFIG_CMD_ERASE=y
-#CONFIG_CMD_ERASEENV=y
-CONFIG_CMD_SETENV=y
-#CONFIG_CMD_PAUSE=y
-CONFIG_CMD_COMPARE=y
-CONFIG_CMD_WAIT=y
-CONFIG_CMD_XRECEIVE=y
-CONFIG_CMD_EMAC=y
-
-CONFIG_ATAG=y
-CONFIG_ATAG_PHYS=0x20000100
-CONFIG_ARCH_NUMBER=609
-
-CONFIG_DRIVER_NOR_CFI=y
-CONFIG_DRIVER_EMAC=y
-
-CONFIG_ENV_AUTOBOOT=50
-
-CONFIG_ENV_REGION_KERNEL=nor:128k+1536k
-CONFIG_ENV_REGION=nor:120k+8k
-
+CONFIG_NOR_BANK0_LENGTH=0x00400000
+# CONFIG_NOR_BANK1 is not set
+# CONFIG_NAND_LPD is not set
 CONFIG_ENV_STARTUP="emac mac 00:08:ee:00:51:e1;"
 
-#CONFIG_INTERRUPTS=y
+#
+# Platform Drivers
+#
+CONFIG_DRIVER_EMAC_LH79524=y
+# CONFIG_ADC is not set
+CONFIG_MACH="lh7952x"
+CONFIG_ARCH_LH79524=y
+
+#
+# Commands
+#
+CONFIG_ALLHELP=y
+CONFIG_CMD_CHECKSUM=y
+CONFIG_CMD_COPY=y
+CONFIG_CMD_COMPARE=y
+CONFIG_CMD_DRVINFO=y
+CONFIG_CMD_DUMP=y
+CONFIG_CMD_ENV=y
+# CONFIG_CMD_ERASEENV is not set
+CONFIG_CMD_SETENV=y
+CONFIG_CMD_ERASE=y
+CONFIG_CMD_FILL=y
+CONFIG_CMD_GO=y
+# CONFIG_CMD_PAUSE is not set
+CONFIG_CMD_WAIT=y
+CONFIG_CMD_XRECEIVE=y
+CONFIG_CMD_EMAC_LH79524=y
+
+#
+# Generic Drivers
+#
+# CONFIG_DRIVER_FAT is not set
+# CONFIG_DRIVER_EXT2 is not set
+CONFIG_DRIVER_NOR_CFI=y
+CONFIG_USES_NOR_CFI=y
+
+#
+# Environment
+#
+CONFIG_NOR_BOOT=y
+# CONFIG_NAND_BOOT is not set
+# CONFIG_AUTOBOOT is not set
+CONFIG_ENV_MUTABLE=y
+CONFIG_ENV_REGION="nor:120k+8k"
+CONFIG_ENV_STARTUP_KERNEL_COPY=y
+CONFIG_ENV_REGION_KERNEL="nor:128k+1536k"
+# CONFIG_ENV_STARTUP_RAMDISK_COPY is not set
+CONFIG_USES_NOR_BOOTFLASH=y
+CONFIG_USES_NAND_BOOTFLASH=y
