@@ -1,56 +1,84 @@
-# lpd7a40x_config
+#
+# Automatically generated make config: don't edit
+# Linux kernel version: 
+# Sun Mar 20 18:19:36 2005
+#
+CONFIG_ARM=y
+# CONFIG_ARCH_LH7952X is not set
+CONFIG_ARCH_LH7A40X=y
+# CONFIG_ARCH_IXP42X is not set
+# CONFIG_EXPERIMENTAL is not set
 
-# Makefile macros
-ARCH=arm
-CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
-
-CONFIG_ARCH=arm
-CONFIG_MACH=lh7a40x
-
-CONFIG_ARCH_ARM=y
-CONFIG_MACH_LH7A40X=y
-CONFIG_MACH_LPD7A40X=y
-CONFIG_APEX_VMA=0xc0200000
-
-CONFIG_KERNEL_LMA=0xc0008000
-
-CONFIG_SDRAM_BANK0=y
-#CONFIG_SDRAM_BANK1=y
-#CONFIG_SDRAM_CONTIGUOUS=1
-
-#CONFIG_DEBUG_LL=y
-
+#
+# General Setup
+#
+CONFIG_CROSS_COMPILE="/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-"
+# CONFIG_SMALL is not set
+# CONFIG_DEBUG_LL is not set
 CONFIG_SPINNER=y
+CONFIG_ATAG=y
+# CONFIG_MACH_LPD79520 is not set
+# CONFIG_MACH_LPD79524 is not set
+CONFIG_ATAG_PHYS=0xc0000100
+CONFIG_APEX_VMA=0xc0200000
+CONFIG_KERNEL_LMA=0xc0008000
+CONFIG_SDRAM_BANK0=y
+# CONFIG_SDRAM_BANK1 is not set
+# CONFIG_CLCDC is not set
+CONFIG_MACH="lh7a40x"
+CONFIG_ARCH_LH79520=y
+CONFIG_MACH_LPD7A400=y
+# CONFIG_MACH_LPD7A404 is not set
 
-#CONFIG_SMALL=y
+#
+# Platform Setup
+#
+CONFIG_ARCH_NUMBER_FUNCTION="determine_arch_number"
+# CONFIG_SDRAM_CONTIGUOUS is not set
+
+#
+# Platform Drivers
+#
+CONFIG_MACH_LPD7A40X=y
+
+#
+# Commands
+#
 CONFIG_ALLHELP=y
-
 CONFIG_CMD_CHECKSUM=y
 CONFIG_CMD_COPY=y
-CONFIG_CMD_DUMP=y
-CONFIG_CMD_DRVINFO=y
-CONFIG_CMD_ENV=y
-CONFIG_CMD_ERASE=y
-#CONFIG_CMD_ERASEENV=y
-CONFIG_CMD_SETENV=y
-#CONFIG_CMD_PAUSE=y
 CONFIG_CMD_COMPARE=y
+CONFIG_CMD_DRVINFO=y
+CONFIG_CMD_DUMP=y
+CONFIG_CMD_ENV=y
+# CONFIG_CMD_ERASEENV is not set
+CONFIG_CMD_SETENV=y
+CONFIG_CMD_ERASE=y
+CONFIG_CMD_FILL=y
+CONFIG_CMD_GO=y
+# CONFIG_CMD_PAUSE is not set
 CONFIG_CMD_WAIT=y
 CONFIG_CMD_XRECEIVE=y
 
-CONFIG_ATAG=y
-CONFIG_ATAG_PHYS=0xc0000100
-#CONFIG_ARCH_NUMBER=
-CONFIG_ARCH_NUMBER_FUNCTION=determine_arch_number
-
+#
+# Generic Drivers
+#
+CONFIG_DRIVER_FAT=y
+CONFIG_DRIVER_EXT2=y
 CONFIG_DRIVER_NOR_CFI=y
+CONFIG_DRIVER_COMPACTFLASH=y
+CONFIG_USES_NOR_CFI=y
+CONFIG_USES_COMPACTFLASH=y
 
-#CONFIG_DRIVER_COMPACTFLASH=y
-#CONFIG_DRIVER_FAT=y
-#CONFIG_DRIVER_EXT2=y
-
-#CONFIG_ENV_AUTOBOOT=50
-CONFIG_ENV_REGION_KERNEL=nor:256k+1536k
-CONFIG_ENV_REGION=nor:128k+64k
-
-#CONFIG_CLCDC=y
+#
+# Environment
+#
+CONFIG_NOR_BOOT=y
+# CONFIG_NAND_BOOT is not set
+# CONFIG_AUTOBOOT is not set
+CONFIG_ENV_MUTABLE=y
+CONFIG_ENV_REGION="nor:128k+64k"
+CONFIG_ENV_STARTUP_KERNEL_COPY=y
+CONFIG_ENV_REGION_KERNEL="nor:256k+1536k"
+# CONFIG_ENV_STARTUP_RAMDISK_COPY is not set
+CONFIG_USES_NOR_BOOTFLASH=y
